--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "core-js": "^3.6.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
