--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.4",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prop-types": "^15.7.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.3",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
