--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "react redux boiler plate",
   "main": "index.js",
   "scripts": {
+    "watch": "webpack --watch",
     "start": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production"
   },
@@ -14,6 +15,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
